# ot-harjoitustyo

./: .coveragerc  .gitignore  .pylintrc  README.md  pyproject.toml  tasks.py  test.db
dokumentaatio/: arkkitehtuuri.md  changelog.md  tyoaikakirjanpito.md  vaatimusmaarittely.md  vaatimusvaarittely.md
laskarit/viikko1/: gitlog.txt
laskarit/viikko2/maksukortti/: pyproject.toml
laskarit/viikko2/maksukortti/src/tests/: maksukortti_test.py
laskarit/viikko2/unicafe/src/tests/: kassapaate_test.py  maksukortti_test.py
laskarit/viikko3/: hsl.md  monopoli.md
src/: db.py  definitions.py  directory_scanning.py  index.py  schema.sql  sql_query_generators.py  sql_search_params.py  utils.py
src/entities/: base_entity.py  instrument.py  search_parameter.py  sheet.py  sheet_directory.py
src/repositories/: base_repository.py  search_parameter_repository.py  settings_repository.py  sheet_repository.py
src/services/: settings_service.py  sheet_service.py
src/tests/: base_entity_test.py  settings_repository_test.py  settings_service_test.py  sheet_repository_test.py  sheet_service_test.py  sheet_test.py  sql_query_generators_test.py  sql_search_params_test.py  utils_test.py
src/user_interface/: main_window.py  menu_bar.py  parameter_line.py  search_parameter_editor.py  sheet_properties.py  sheets_table.py
src/user_interface/model/: sheet_model.py
src/user_interface/preference_window/: directory_manager.py  instrument_manager.py  preference_window.py  string_list_manager.py
