[tool.poetry]
name = "ot-harjoitustyo"
version = "0.1.0"
description = "Nuottien hallinnointisovellus"
authors = ["Tatu Laras <tatu.laras@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pyqt6 = "^6.8.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
