[tool.poetry]
name = "ot-harjoitustyo"
version = "0.1.0"
description = "Nuottien hallinnointisovellus"
authors = ["Tatu Laras <tatu.laras@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pyqt6 = "^6.8.1"
invoke = "^2.2.0"
pytest = "^8.3.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100

[tool.pyright]
reportArgumentType = "warning"
reportOptionalMemberAccess = "warning"
